# Fileogenetic-Tree

./: .gitignore  README.md  file-dendrite.html  index.html  index.md  package-lock.json  package.json
src/: api.md  api.ts  main.md  main.ts  renderer.md  renderer.ts  styles.css  styles.md  tree.md  tree.ts  types.md  types.ts
src-tauri/: Cargo.toml  build.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.md  commands.rs  index_store.md  index_store.rs  lib.md  lib.rs  main.md  main.rs  models.md  models.rs  scanner.md  scanner.rs
src/layouts/: radial.md  radial.ts  treemap.md  treemap.ts
