[package]
name = "fileogenetic-tree"
version = "0.1.0"
description = "A living, indexed map of a filesystem"
authors = ["Fileogenetic Tree contributors"]
edition = "2021"

[lib]
name = "fileogenetic_tree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
walkdir = "2"

